# notify

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  THIRD_PARTY_LICENSES  TODO.md  go.mod  go.sum  wails.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cmd/mkicon/: main.go
cmd/notify/: commands.go  commands_test.go  history.go  history_test.go  init.go  init_test.go  main.go  main_test.go  notify-config.example.json  shellhook.go  voice.go  voice_test.go
cmd/notify-app/: app.go  geometry.go  main.go  rsrc_windows_386.syso  rsrc_windows_amd64.syso  shift_windows.go  topmost_windows.go  tray.go
cmd/notify-app/winres/: winres.json
internal/audio/: player.go  sounds.go  sounds_test.go  wav.go  wav_test.go
internal/config/: config.go  config_test.go  sounds_sync_test.go
internal/cooldown/: cooldown.go  cooldown_test.go
internal/dashboard/: dashboard.go  dashboard_test.go  watch.go
internal/dashboard/static/: index.html
internal/desktop/: desktop_other.go  desktop_test.go  desktop_windows.go  protocol_other.go  protocol_windows.go
internal/discord/: discord.go  discord_test.go
internal/eventlog/: eventlog.go  eventlog_test.go  filestore.go  filestore_test.go  parse.go  parse_test.go  sqlitestore.go  sqlitestore_test.go  store.go  summary.go  summary_test.go
internal/ffmpeg/: convert.go  convert_test.go
internal/httputil/: snippet.go  snippet_test.go
internal/icon/: icon.go  icon_test.go
internal/idle/: idle_darwin.go  idle_linux.go  idle_windows.go  idle_windows_test.go
internal/mqtt/: mqtt.go  mqtt_test.go
internal/paths/: paths.go  paths_test.go
internal/plugin/: plugin.go  plugin_test.go
internal/procwait/: wait_test.go  wait_unix.go  wait_windows.go
internal/runner/: runner.go  runner_test.go
internal/shell/: escape.go  escape_darwin.go  escape_darwin_test.go  escape_test.go  hook.go  hook_test.go
internal/silent/: silent.go  silent_test.go
internal/slack/: slack.go  slack_test.go
internal/speech/: say_darwin.go  say_linux.go  say_windows.go  say_windows_test.go
internal/telegram/: telegram.go  telegram_test.go
internal/tmpl/: tmpl.go  tmpl_test.go
internal/toast/: icon.go  toast_darwin.go  toast_linux.go  toast_windows.go  toast_windows_test.go
internal/voice/: voice.go  voice_test.go
internal/webhook/: webhook.go  webhook_test.go
